# s-panel

./: .gitignore  API_AUDIT.md  CHANGES.md  TODO.md  WALKTHROUGH.md  changes.md  install.sh  update.sh
backend/: generate_service.py  main.py  migrate_db.py  pyproject.toml  reset_password.py  run_migrations.py  status.py
backend/app/api/: deps.py
backend/app/core/: config.py  migrations.py  security.py
backend/app/models/: database.py  deployment.py  deployment_history.py  settings.py  waf.py  website.py
backend/app/schemas/: cron.py  docker.py  files.py  firewall.py  mysql.py  postgres.py  redis.py  supervisor.py  system.py  user.py  (+2 more)
backend/migrations/: 20260208220000_add_dockerfile_path.py  20260218133000_add_website_linking.py
backend/tests/: conftest.py  test_containers.py  test_cron.py  test_cron_visibility.py  test_deployment_link.py  test_deployments.py  test_deployments_swarm_retention.py  test_email_notifications.py  test_email_ssl.py  test_ensure_job.py  test_file_manager.py  test_files.py  test_find_free_port.py  test_firewall_manager.py  test_laravel_service_config.py  test_log_parser.py  test_logs_security.py  test_memory_clear.py  test_monitor.py  test_monitor_websocket.py  test_mysql_manager.py  test_nginx_manager.py  test_permissions.py  test_postgres_injection.py  test_redis.py  test_security_path_traversal.py  test_security_paths.py  test_security_website.py  test_ssl_enable_cron.py  test_supervisor.py  test_swarm.py  test_system.py  test_terminal.py  test_waf.py  test_webhook_branch.py  test_website_manager.py  test_website_update_ssl.py
(+94 files in other folders)
